--- a/Data/RCleaning_Garmin_Strava.html
+++ b/Data/RCleaning_Garmin_Strava.html
@@ -657,7 +657,7 @@ newGarmin &lt;- newGarmin[!newGarmin$Date == &quot;2016-09-01&quot;,]</code></pr
 ## 2016-11-19 2016-11-20 
 ##      FALSE      FALSE</code></pre>
 <p>There was probably an easier way to do this, but I see that there’s the 2 runs on August 12, and also 2 on October 23.</p>
-<pre class="r"><code>which(newStrava$Date == '2016-08-12') #runs 95 and 96</code></pre>
+<pre class="r"><code>which(newStrava$Date == '2016-08-12') </code></pre>
 <pre><code>## [1] 22 23</code></pre>
 <p>Let’s check those records.</p>
 <pre class="r"><code>newStrava[22:23,]</code></pre>
@@ -871,6 +871,12 @@ table(newFullData$RunType)</code></pre>
 ##     Long Run         Race Recovery Run          Run      Workout 
 ##           13            1           40           46           16</code></pre>
 <p>Looks like I’ve got a lot of “plain” runs and a lot of recovery runs. Just goes to show that you don’t need to kill yourself out there every time you run to race a marathon!</p>
+<p>Now time to convert my heart rate variables <em>Avg.HR</em> and <em>Max.HR</em>, as well as my <em>Calories</em> and <em>Elevation.Gain</em> variables so that they’re numerical and I can do math on them.</p>
+<pre class="r"><code>newFullData$Avg.HR &lt;- as.numeric(as.character(newFullData$Avg.HR, stringsAsFactors = FALSE))
+newFullData$Max.HR &lt;- as.numeric(as.character(newFullData$Max.HR, stringsAsFactors = FALSE))
+newFullData$Calories &lt;- as.numeric(gsub(&quot;,&quot;,&quot;&quot;,newFullData$Calories))
+newFullData$Elevation.Gain &lt;- as.numeric(as.character(newFullData$Elevation.Gain, stringsAsFactors = FALSE))</code></pre>
+<pre><code>## Warning: NAs introduced by coercion</code></pre>
 <p>Now time to fix my Cadence figures, since it seems like they are half of what they should be.</p>
 <pre class="r"><code>newFullData$Cad &lt;- newFullData$Cad*2</code></pre>
 <p>Alright, cool.</p>
