Add links to home page

--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@ str(runs)</code></pre>
 							<p>That’s all I can think of to check out so far. If you’re reading this and can think of anything else, let me know in <a href="https://www.linkedin.com/in/stephen-newns">LinkedIn!</a> I can’t wait to add to this dataset with my training runs for Philly 2017, with the hopes of breaking 3 hours! But for now, I’m going to move onto the analysis of artists I listen to on Spotify via their API!</p>
 							<p>The code for this can be found <a href="https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/R_Analysis_script.R">here</a>, as well as the code for the <a href="https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/R_CleaningScript.R">cleaning and initial creation of the dataset</a></p>
 
+				<h2><a href="https://newns92.github.io/">Back to home</h2>
+							
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
@@ -312,6 +314,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+						<li><a href="https://newns92.github.io/" class="icon fa-home"><span class="label">Home</span></a></li>
 						<li><a href="https://github.com/newns92/" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/stephen-newns//" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<!--<<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
